fix white space

--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
     background-color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
